test/libsolidity/syntaxTests/nameAndTypeResolution/536_array_length_invalid_expression_negative_bool.sol
contract C {
    uint[-true] ids;
}
// ----
// TypeError 5462: (22-27='-true'): Invalid array length, expected integer literal or constant expression.
